# reddit-post-notifier

./: .gitignore  LICENSE  README.md  pyproject.toml  searches.yml.example
reddit_post_notifier/: __init__.py  __main__.py
